--- a/paper/sections/related-works.tex
+++ b/paper/sections/related-works.tex
@@ -6,8 +6,8 @@ to evaluate language systems.
 \xhdr{Online anti-social behaviors}
 Prior work extensively characterized anti-social behaviors in online communities.
 %
-These examples of anti-social behaviors include hate speech ~\citep{}, 
-toxicity~\citep{}, trolling~\citep{}, etc. 
+These examples of anti-social behaviors include hate speech ~\citep{rottger-etal-2021-hatecheck, elsherief-etal-2021-latent}, 
+toxicity~\citep{pavlopoulos-etal-2020-toxicity, bespalov-etal-2023-towards}, trolling~\citep{mojica-de-la-vega-ng-2018-modeling, lee-etal-2022-elf22}, etc. 
 %
 \citep{zhang-etal-2018-conversations} introduced the Conversations Gone Awry (CGA)
 task that characterizes an awry conversation as one that derails into rude or 
@@ -50,8 +50,7 @@ These examples could potentially mislead the models in making incorrect predicti
 Previous work used these attacks to understand model weaknesses and evaluate its 
 robustness.
 %
-These attacks were applied in many other NLP tasks including question-answering\citep{}, 
-text classification\cite{}, and machine translation\cite{}, etc.
+These attacks, applied in many other NLP tasks,  can be created by heuristically editing \cite{wang-bansal-2018-robust} or through neural-based generation \cite{iyyer-etal-2018-adversarial, khashabi-etal-2020-bang, bartolo-etal-2021-improving, fu-etal-2023-scene}.
 %
 However, our work uses adversaries to evaluate language understanding in the context of 
 the CGA task. 
