--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -10,3 +10,6 @@ To further test the hypothesis that the influence of conversational context dimi
 Instead of removing the context and creating ambiguous utterances, this test modifies the conversational context to alter the meaning and intent of escalatory utterances, transforming them into calmer exchanges. 
 %
 Our findings confirm that even under the TraMa setting, conversational context has a limited effect on the forecasts of the RoBERTa model when encountering highly escalatory utterances.
+%
+Furthermore, our analysis reveals that TraMa (artificially calming) conversational trajectories have a significantly greater impact on model forecasts compared to the complete absence of context.
+
