fix typos and wording

--- a/paper/sections/cga_task.tex
+++ b/paper/sections/cga_task.tex
@@ -8,7 +8,7 @@ where $f$ is a classification model, \emph{context} represents a static snapshot
 
 In real-world applications, however, derailment forecasting must occur dynamically, following each utterance in an ongoing conversation. This introduces additional complexities, requiring a temporal dimension to Equation \ref{eq:classification}:
 \begin{equation}
-p_{\mathrm{event}}(t) = f(\mathrm{context}(t))
+p_{\mathrm{derailment}}(t) = f(\mathrm{context}(t))
 \label{eq:forecastingmodel}
 \end{equation}
 
