--- a/paper/sections/related-works.tex
+++ b/paper/sections/related-works.tex
@@ -9,7 +9,7 @@ Prior work extensively characterized anti-social behaviors in online communities
 These examples of anti-social behaviors include hate speech ~\citep{rottger-etal-2021-hatecheck, elsherief-etal-2021-latent}, 
 toxicity~\citep{pavlopoulos-etal-2020-toxicity, bespalov-etal-2023-towards}, trolling~\citep{mojica-de-la-vega-ng-2018-modeling, lee-etal-2022-elf22}, etc. 
 %
-\citep{zhang-etal-2018-conversations} introduced the Conversations Gone Awry (CGA)
+\citet{zhang-etal-2018-conversations} introduced the Conversations Gone Awry (CGA)
 task that characterizes an awry conversation as one that derails into rude or 
 hostile behaviors such as personal attacks. 
 %
@@ -23,9 +23,9 @@ the conversation.
 Therefore, conversational forecasting has the potential to anticipate behaviors 
 and inform decision-making in real-time.
 %
-Previous work has focused on conversational forecasting for toxic behaviors\cite{}. 
+Previous work has focused on conversational forecasting for toxic behaviors. 
 %
-\cite{chang-danescu-niculescu-mizil-2019-trouble} formalizes this task on the CGA 
+\citet{chang-danescu-niculescu-mizil-2019-trouble} formalizes this task on the CGA 
 task. 
 %
 This is done in an online prediction manner, where forecasts are made at every 
@@ -34,7 +34,7 @@ utterance timestep.
 Conversation-level forecasts are then determined using these uterance-level forecasts.
 %
 In this work, we follow the task setup introduced in 
-\cite{chang-danescu-niculescu-mizil-2019-trouble}.
+\citet{chang-danescu-niculescu-mizil-2019-trouble}.
 %
 However, we further investigate the CGA conversational forecasting task 
 by examining whether or not SOTA models for this task use the context of 
