--- a/paper/sections/related-works.tex
+++ b/paper/sections/related-works.tex
@@ -23,21 +23,21 @@ the conversation.
 Therefore, conversational forecasting has the potential to anticipate behaviors 
 and inform decision-making in real-time.
 %
-Previous work has focused on conversational forecasting for toxic behaviors. 
+Previous work also focused on conversational forecasting for toxic behaviors. 
 %
-\citet{chang-danescu-niculescu-mizil-2019-trouble} formalizes this task on the CGA 
+In particular, \citet{chang-danescu-niculescu-mizil-2019-trouble} formalizes this on the CGA 
 task. 
 %
 This is done in an online prediction manner, where forecasts are made at every 
 utterance timestep.
 %
-Conversation-level forecasts are then determined using these uterance-level forecasts.
+Conversation-level forecasts are then determined using these utterance-level forecasts.
 %
 In this work, we follow the task setup introduced in 
 \citet{chang-danescu-niculescu-mizil-2019-trouble}.
 %
 However, we further investigate the CGA conversational forecasting task 
-by examining whether or not SOTA models for this task use the context of 
+by examining whether or not SOTA models use the context of 
 the conversation in order to make its forecasts.
 
 
