--- a/paper/sections/related-works.tex
+++ b/paper/sections/related-works.tex
@@ -50,10 +50,10 @@ These examples could potentially mislead the models in making incorrect predicti
 Previous work used these attacks to understand model weaknesses and evaluate its 
 robustness.
 %
-These attacks, applied in many other NLP tasks,  can be created by heuristically editing \cite{wang-bansal-2018-robust} or through neural-based generation \cite{iyyer-etal-2018-adversarial, khashabi-etal-2020-bang, bartolo-etal-2021-improving, fu-etal-2023-scene}.
+These attacks, applied in many other NLP tasks, can be created by heuristically editing \cite{wang-bansal-2018-robust} or through neural-based generation \cite{iyyer-etal-2018-adversarial, khashabi-etal-2020-bang, bartolo-etal-2021-improving, fu-etal-2023-scene}.
 %
 However, our work uses adversaries to evaluate language understanding in the context of 
 the CGA task. 
 %
 In particular, we use these adversarial examples to understand whether or not the 
-SOTA models in the CGA task use conversational dynamics to make their predictions.
+SOTA models in the CGA setting use conversational dynamics to make their predictions.
