--- a/paper/acl_latex.tex
+++ b/paper/acl_latex.tex
@@ -49,6 +49,7 @@ Cornell University, Ithaca, NY\\
 \input{sections/project-specifics}
 \input{sections/future-work}
 \input{sections/conclusion}
+\input{sections/acks}
 
 % Bibliography entries for the entire Anthology, followed by custom entries
 %\bibliography{anthology,custom}
