--- a/paper/sections/acks.tex
+++ b/paper/sections/acks.tex
@@ -1,5 +1,5 @@
 \section*{Acknowledgements}
 We thank Professor Cristian Danescu-Niculescu-Mizil for his valuable insights 
 and feedback throughout the project. We also thank Sil Hamilton and 
-Geoffrey Martin for assisting with the humman annotation task, and the students 
-in INFO 6742 for their helpful discussions.
+Geoffrey Martin for assisting with the humman annotation task, and the INFO 6742 
+class for their helpful discussions.
