--- a/paper/acl_latex.tex
+++ b/paper/acl_latex.tex
@@ -21,6 +21,7 @@
 \usepackage{inconsolata}
 
 \usepackage{graphicx}
+\usepackage{xcolor}
 
 
 \title{Conversation Gone Awry: Does Trajectory Matter?}
