--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -72,8 +72,10 @@ The p-values for the Weak set, Strong set, and combining both sets were all stro
 This suggests that the models do in fact utilize conversational context to some degree when making forecasts. 
 Combined, these results indicate that SOTA models do utilize conversational context when making forecasts, but the impact of context is less pronounced when the utterance is highly escalatory.
 
+{\color{blue}
 \xhdr{Baseline Comparison}
 To provide a baseline for comparison, we also conduct the TraMa test on a nonsense context.
+\footnote{As suggested by Prof. DNM in an in-class discussion}
 Rather than using ChatGPT to generate the preceding context, we use the following fixed context as the preceding utterance: 
 
 {\ttfamily
@@ -88,6 +90,7 @@ We then compare this change with the change observed in the TraMa setting.
 A paired t-test was run to test the statistical significance of the results.
 We find that the decrease in forecast probabilities due to TraMa context is significantly greater than the decrease due to the nonsense context ($p < 0.0001$).
 This suggests that the TraMa context is more effective at altering the forecast probabilities than a nonsense context, further supporting our finding that the model utilizes conversational context when making utterance-level forecasts.
+}
 
 \xhdr{Human Annotation Task}
 %
