--- a/paper/sections/acks.tex
+++ b/paper/sections/acks.tex
@@ -1,5 +1,5 @@
 \section*{Acknowledgements}
 We thank Professor Cristian Danescu-Niculescu-Mizil for his valuable insights 
 and feedback. We also thank Sil Hamilton and Geoffrey Martin for 
-assisting with the human annotation task and the INFO 6742 
+assisting with the human annotation task and the CS 6742 
 class for helpful discussions throughout the project.
